# data-processing-challenge

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_data_processing_challenge.py
